Fix img alt in image at sidebar for CopyRatings.
Also modified the keys.

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6506 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -667,10 +667,10 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
-foxtrick.tweaks.copyratings.both=Copy ratings (in HT-ML)
-foxtrick.tweaks.copyratings.home=Copy home team ratings (in HT-ML)
-foxtrick.tweaks.copyratings.away=Copy away team ratings (in HT-ML)
-foxtrick.tweaks.ratingscopied=The ratings have been copied to the clipboard.
+CopyRatings.both=Copy ratings (in HT-ML)
+CopyRatings.home=Copy home team ratings (in HT-ML)
+CopyRatings.away=Copy away team ratings (in HT-ML)
+CopyRatings.copied=The ratings have been copied to the clipboard.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copy training report to clipboard
 foxtrick.tweaks.copyskilltable=Copy skill table to clipboard (in HT-ML)
