--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -688,10 +688,10 @@ foxtrick.tweaks.copyplayerad=Капіяваць аб’яву гульца
 foxtrick.tweaks.copied=Аб’ява пра гульца была зкапіявана
 HatStatsDetailed=HatStats (дэталёвы)
 HatStatsTotalOnly=HatStats (толькі агульны)
-foxtrick.tweaks.copyratings=Капіяваць рэйтынгі (у HT-ML)
-foxtrick.tweaks.copyratings.home=Капіяваць рэйтынгі гаспадароў (у HT-ML)
-foxtrick.tweaks.copyratings.away=Капіяваць рэйтынгі гасьцей (у HT-ML)
-foxtrick.tweaks.ratingscopied=Рэйтынгі былі зкапіяваныя.
+CopyRatings=Капіяваць рэйтынгі (у HT-ML)
+CopyRatings.home=Капіяваць рэйтынгі гаспадароў (у HT-ML)
+CopyRatings.away=Капіяваць рэйтынгі гасьцей (у HT-ML)
+CopyRatings.copied=Рэйтынгі былі зкапіяваныя.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Капіяваць справаздачу па трэніроўцы
 foxtrick.tweaks.copyskilltable=Капіяваць табліцы здольнасьцей (in HT-ML)
