--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -705,10 +705,10 @@ foxtrick.tweaks.copyplayerad=Iskopirajte podatke o igraču u clipboard
 foxtrick.tweaks.copied=Podaci o igraču su iskopirani u clipboard
 HatStatsDetailed=Hatstats (detaljno)
 HatStatsTotalOnly=Hatstats (ukupno)
-foxtrick.tweaks.copyratings.both=Kopiraj ocjene (u HT-ML)
-foxtrick.tweaks.copyratings.home=Kopiraj ocjene domaćeg tima (u HT-ML)
-foxtrick.tweaks.copyratings.away=Kopiraj ocjene gostujućeg tima (u HT-ML)
-foxtrick.tweaks.ratingscopied=Ocjene su uspјešno iskopirane u clipboard.
+CopyRatings.both=Kopiraj ocjene (u HT-ML)
+CopyRatings.home=Kopiraj ocjene domaćeg tima (u HT-ML)
+CopyRatings.away=Kopiraj ocjene gostujućeg tima (u HT-ML)
+CopyRatings.copied=Ocjene su uspјešno iskopirane u clipboard.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Kopiraj izvještaj s treninga u clipboard
 foxtrick.tweaks.copyskilltable=Kopiraj tabelu s vještinama u clipboard (u HT-ML)
