--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -689,10 +689,10 @@ foxtrick.tweaks.copyplayerad=Kopírovat vlastnosti hráče do schránky
 foxtrick.tweaks.copied=Informace o hráči byly vloženy do schránky.
 HatStatsDetailed=HatStats (podrobné)
 HatStatsTotalOnly=HatStats (jen celkové)
-foxtrick.tweaks.copyratings=Zkopírovat hodnocení do schránky (v HT-ML)
-foxtrick.tweaks.copyratings.home=Zkopírovat hodnocení domácího týmu do schránky (v HT-ML)
-foxtrick.tweaks.copyratings.away=Zkopírovat hodnocení hostujícího týmu do schránky (v HT-ML)
-foxtrick.tweaks.ratingscopied=Zápasové hodnocení bylo vloženo do schránky.
+CopyRatings=Zkopírovat hodnocení do schránky (v HT-ML)
+CopyRatings.home=Zkopírovat hodnocení domácího týmu do schránky (v HT-ML)
+CopyRatings.away=Zkopírovat hodnocení hostujícího týmu do schránky (v HT-ML)
+CopyRatings.copied=Zápasové hodnocení bylo vloženo do schránky.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Kopírovat hlášení o tréninku do schránky
 foxtrick.tweaks.copyskilltable=Kopírovat tabulku dovedností do schránky (v HT-ML)
