--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -670,10 +670,10 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
-foxtrick.tweaks.copyratings.both=Ratings kopieren (HT-ML Code style)
-foxtrick.tweaks.copyratings.home=Ratings der Heimmannschaft kopieren (HT-ML Code style)
-foxtrick.tweaks.copyratings.away=Ratings der Auswärtsmannschaft kopieren (HT-ML Code style)
-foxtrick.tweaks.ratingscopied=Die Ratings wurden in die Zwischenablage kopiert.
+CopyRatings.both=Ratings kopieren (HT-ML Code style)
+CopyRatings.home=Ratings der Heimmannschaft kopieren (HT-ML Code style)
+CopyRatings.away=Ratings der Auswärtsmannschaft kopieren (HT-ML Code style)
+CopyRatings.copied=Die Ratings wurden in die Zwischenablage kopiert.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Kopiere Trainingsreport in die Zwischenablage
 foxtrick.tweaks.copyskilltable=Skilltabelle in die Zwischenablage kopieren (HT Forum Style)
