--- a/content/locale/es/foxtrick.properties
+++ b/content/locale/es/foxtrick.properties
@@ -703,10 +703,10 @@ foxtrick.tweaks.copyplayerad=Copiar información de jugador a portapapeles
 foxtrick.tweaks.copied=La información del jugador ha sido copiada al portapapeles.
 HatStatsDetailed=HatStats (detallado)
 HatStatsTotalOnly=HatStats (sólo total)
-foxtrick.tweaks.copyratings.both=Copiar calificaciones (en HT-ML)
-foxtrick.tweaks.copyratings.home=Copiar calificaciones equipo local (en HT-ML)
-foxtrick.tweaks.copyratings.away=Copiar calificaciones equipo visitante (en HT-ML)
-foxtrick.tweaks.ratingscopied=Se han copiado las calificaciones al portapapeles
+CopyRatings.both=Copiar calificaciones (en HT-ML)
+CopyRatings.home=Copiar calificaciones equipo local (en HT-ML)
+CopyRatings.away=Copiar calificaciones equipo visitante (en HT-ML)
+CopyRatings.copied=Se han copiado las calificaciones al portapapeles
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copiar informe de entrenamiento al portapapeles
 foxtrick.tweaks.copyskilltable=Copiar tabla de calificaciones al portapapeles (in HT-ML)
