--- a/content/locale/es_SU/foxtrick.properties
+++ b/content/locale/es_SU/foxtrick.properties
@@ -725,10 +725,10 @@ foxtrick.tweaks.copyplayerad=Copiar anuncio de jugador al portapapeles
 foxtrick.tweaks.copied=El anuncio del jugador ha sido copiado al portapapeles
 HatStatsDetailed=HatStats (detalladas)
 HatStatsTotalOnly=HatStats (sólo totales)
-foxtrick.tweaks.copyratings.both=Copiar las calificaciones (codigo HT-ML)
-foxtrick.tweaks.copyratings.home=Copiar las calificaciones del equipo local (código HT-ML)
-foxtrick.tweaks.copyratings.away=Copiar las calificaciones del equipo visitante (código HT-ML)
-foxtrick.tweaks.ratingscopied=Las calificaciones han sido copiadas al portapapeles.
+CopyRatings.both=Copiar las calificaciones (codigo HT-ML)
+CopyRatings.home=Copiar las calificaciones del equipo local (código HT-ML)
+CopyRatings.away=Copiar las calificaciones del equipo visitante (código HT-ML)
+CopyRatings.copied=Las calificaciones han sido copiadas al portapapeles.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copiar el reporte de entrenamiento al portapapeles
 foxtrick.tweaks.copyskilltable=Copiar la tabla de habilidades al portapapeles (código HT-ML para el foro)
