--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -726,10 +726,10 @@ foxtrick.tweaks.copied=Les détails du joueur ont été copiés dans le presse-p
 foxtrick.tweaks.bornin=Né en
 HatStatsDetailed=HatStats (détaillé)
 HatStatsTotalOnly=HatStats (total)
-foxtrick.tweaks.copyratings=Copier les performances détaillés dans le presse-papiers (style HT-ML)
-foxtrick.tweaks.copyratings.home=Copier les performances détaillés de l'équipe jouant à domicile dans le presse-papiers (style HT-BBCode)
-foxtrick.tweaks.copyratings.away=Copier les performances détaillés de l'équipe jouant à l'extérieur dans le presse-papiers (style HT-BBCode)
-foxtrick.tweaks.ratingscopied=Les performances détaillés ont été copiées dans le presse-papiers.
+CopyRatings=Copier les performances détaillés dans le presse-papiers (style HT-ML)
+CopyRatings.home=Copier les performances détaillés de l'équipe jouant à domicile dans le presse-papiers (style HT-BBCode)
+CopyRatings.away=Copier les performances détaillés de l'équipe jouant à l'extérieur dans le presse-papiers (style HT-BBCode)
+CopyRatings.copied=Les performances détaillés ont été copiées dans le presse-papiers.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copier le rapport d'entraînement dans le presse-papiers
 foxtrick.tweaks.copyskilltable=Copier le tableau de compétences dans le presse-papiers (style HT Forum)
