--- a/content/locale/fur/foxtrick.properties
+++ b/content/locale/fur/foxtrick.properties
@@ -617,10 +617,10 @@ foxtrick.tweaks.copied=The player ad has been copied to the clipboard.
 foxtrick.tweaks.bornin=Born in
 HatStatsDetailed=HatStats (detailed)
 HatStatsTotalOnly=HatStats (total only)
-foxtrick.tweaks.copyratings=Copy ratings to the clipboard (HT-BBCode style)
-foxtrick.tweaks.copyratings.home=Copy home team ratings to the clipboard (HT-BBCode style)
-foxtrick.tweaks.copyratings.away=Copy away team ratings to the clipboard (HT-BBCode style)
-foxtrick.tweaks.ratingscopied=The Ratings have been copied to the clipboard.
+CopyRatings=Copy ratings to the clipboard (HT-BBCode style)
+CopyRatings.home=Copy home team ratings to the clipboard (HT-BBCode style)
+CopyRatings.away=Copy away team ratings to the clipboard (HT-BBCode style)
+CopyRatings.copied=The Ratings have been copied to the clipboard.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copy training report to clipboard
 foxtrick.tweaks.copyskilltable=Copy skill table to clipboard (HT Forum style)
