--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -353,7 +353,7 @@ foxtrick.tweaks.bornin=Nado en
 HatStatsDetailed=HatStats (en detalle)
 HatStatsTotalOnly=HatStats (Soamente os totais)
 foxtrick.tweaks.copyratings=Copia as calificacións ó portapapeis (Estilo HT-BBCode)
-foxtrick.tweaks.ratingscopied=As calificacións copiáronse ó portapapeis.
+CopyRatings.copied=As calificacións copiáronse ó portapapeis.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copia o reporte do adestramento ó portapapeis
 foxtrick.tweaks.reportcopied=O reporte do adestramento copiouse ó portapapeis
