--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -731,10 +731,10 @@ foxtrick.tweaks.copied=Igračev oglas je kopiran u međuspremnik.
 foxtrick.tweaks.bornin=Rođen u
 HatStatsDetailed='HatStats' (detaljno)
 HatStatsTotalOnly='HatStats' (samo ukupno)
-foxtrick.tweaks.copyratings=Kopiraj ocjene u međuspremnik (HT-ML stil)
-foxtrick.tweaks.copyratings.home=Kopiraj ocjene domaće momčadi u međuspremnik (HT-ML stil)
-foxtrick.tweaks.copyratings.away=Kopiraj ocjene gostujuće momčadi u međuspremnik (HT-ML stil)
-foxtrick.tweaks.ratingscopied=Ocjene su kopirane u međuspremnik.
+CopyRatings=Kopiraj ocjene u međuspremnik (HT-ML stil)
+CopyRatings.home=Kopiraj ocjene domaće momčadi u međuspremnik (HT-ML stil)
+CopyRatings.away=Kopiraj ocjene gostujuće momčadi u međuspremnik (HT-ML stil)
+CopyRatings.copied=Ocjene su kopirane u međuspremnik.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Kopiraj izvješće s treninga u međuspremnik
 foxtrick.tweaks.copyskilltable=Kopiraj tablicu s vještinama u međuspremnik (HT-ML stil)
