--- a/content/locale/is/foxtrick.properties
+++ b/content/locale/is/foxtrick.properties
@@ -656,10 +656,10 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
-foxtrick.tweaks.copyratings.both=Afrita einkunnagjöf (í HT-ML)
-foxtrick.tweaks.copyratings.home=Afrita einkunnagjöf heimaliðs (í HT-ML)
-foxtrick.tweaks.copyratings.away=Afrita einkunnagjöf gestaliðs (í HT-ML)
-foxtrick.tweaks.ratingscopied=Einkunnagjöfin hefur verið afrituð á klippiborðið.
+CopyRatings.both=Afrita einkunnagjöf (í HT-ML)
+CopyRatings.home=Afrita einkunnagjöf heimaliðs (í HT-ML)
+CopyRatings.away=Afrita einkunnagjöf gestaliðs (í HT-ML)
+CopyRatings.copied=Einkunnagjöfin hefur verið afrituð á klippiborðið.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Afrita þjálfunarskýrslu á klippiborðið
 foxtrick.tweaks.copyskilltable=Afrita hæfnistöflu á klippiborðið (í HT-ML)
