--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -539,7 +539,7 @@ foxtrick.tweaks.bornin=Gebuer an dësem Land:
 HatStatsDetailed=HatStats (Detailer)
 HatStatsTotalOnly=HatStats (just d'Zomm)
 foxtrick.tweaks.copyratings=D'Bewäertunge vum Match an d'Tëschepalette kopéieren (am Format vum HT-ML)
-foxtrick.tweaks.ratingscopied=D'Bewäertunge vum Match goufen an d'Tëschepalette kopéiert.
+CopyRatings.copied=D'Bewäertunge vum Match goufen an d'Tëschepalette kopéiert.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Rapport vum Training an d'Tëschepalette kopéieren.
 foxtrick.tweaks.reportcopied=De Rapport vum Training gouf an d'Tëschepalette kopéiert.
