--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -355,7 +355,7 @@ foxtrick.tweaks.bornin=Gimė
 HatStatsDetailed=HatStats (detalus)
 HatStatsTotalOnly=HatStats (bendras)
 foxtrick.tweaks.copyratings=Kopijuoti rungtynių reitingus (HT-BBCode stiliumi)
-foxtrick.tweaks.ratingscopied=Reitingai nukopijuoti.
+CopyRatings.copied=Reitingai nukopijuoti.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Nuopijuoti treniruotės ataskaitą
 foxtrick.tweaks.reportcopied=Treniruotės ataskaita nukopijuota.
