--- a/content/locale/mk/foxtrick.properties
+++ b/content/locale/mk/foxtrick.properties
@@ -534,7 +534,7 @@ foxtrick.tweaks.bornin=Роден во
 HatStatsDetailed=HatStats (детално)
 HatStatsTotalOnly=HatStats (само вкупно)
 foxtrick.tweaks.copyratings=Копирај ги рејтинзите на таблата за копирање (clipboard) (HT BB код стил).
-foxtrick.tweaks.ratingscopied=Рејтинзите се ископирани на таблата за копирање (clipboard).
+CopyRatings.copied=Рејтинзите се ископирани на таблата за копирање (clipboard).
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Копирај го тренинг извештајот на таблата за копирање (clipboard).
 foxtrick.tweaks.reportcopied=Тренинг извештајот е копиран на таблата за копирање (clipboard).
