--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -724,10 +724,10 @@ foxtrick.tweaks.copied=L-avviż tal-plejer ġie ikkopjat għal fuq il-clipboard.
 foxtrick.tweaks.bornin=Twieled f'
 HatStatsDetailed=HatStats (dettaljati)
 HatStatsTotalOnly=HatStats (total biss)
-foxtrick.tweaks.copyratings=Ikkopja l-evalwazzjonijiet għal fuq il-clipboard (f'HT-ML)
-foxtrick.tweaks.copyratings.home=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab f'daru
-foxtrick.tweaks.copyratings.away=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab barra minn daru għal fuq il-clipboard (f'HT-ML)
-foxtrick.tweaks.ratingscopied=L-evalwazzjonijiet ġew ikkopjati għal fuq il-clipboard.
+CopyRatings=Ikkopja l-evalwazzjonijiet għal fuq il-clipboard (f'HT-ML)
+CopyRatings.home=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab f'daru
+CopyRatings.away=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab barra minn daru għal fuq il-clipboard (f'HT-ML)
+CopyRatings.copied=L-evalwazzjonijiet ġew ikkopjati għal fuq il-clipboard.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Ikkopja r-rapport tat-taħriġ għal fuq il-clipboard
 foxtrick.tweaks.copyskilltable=Ikkopja t-tabella tal-abbiltajiet għal fuq il-clipboard (f'HT-ML)
