--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -650,10 +650,10 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
-foxtrick.tweaks.copyratings=Kopieer ratings naar het klembord (HT-ML opmaak)
-foxtrick.tweaks.copyratings.home=Kopieer ratings thuisteam naar het klembord (HT-ML opmaak)
-foxtrick.tweaks.copyratings.away=Kopieer ratings uitteam naar het klembord (HT-ML opmaak)
-foxtrick.tweaks.ratingscopied=De ratings zijn naar het klembord gekopieerd.
+CopyRatings=Kopieer ratings naar het klembord (HT-ML opmaak)
+CopyRatings.home=Kopieer ratings thuisteam naar het klembord (HT-ML opmaak)
+CopyRatings.away=Kopieer ratings uitteam naar het klembord (HT-ML opmaak)
+CopyRatings.copied=De ratings zijn naar het klembord gekopieerd.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Kopieer trainingsverslag naar het klembord
 foxtrick.tweaks.copyskilltable=Kopieer tabel met vaardigheden naar het klembord (HT forum opmaak)
