--- a/content/locale/nn/foxtrick.properties
+++ b/content/locale/nn/foxtrick.properties
@@ -709,10 +709,10 @@ foxtrick.tweaks.copyplayerad=Kopier spelarannonse
 foxtrick.tweaks.copied=Spelarannonsa har vorte kopiert.
 HatStatsDetailed=HatStats (detaljert)
 HatStatsTotalOnly=HatStats (Berre total)
-foxtrick.tweaks.copyratings.both=Kopier ratingane (i HT-ML)
-foxtrick.tweaks.copyratings.home=Kopier heimelaget sin rating (i HT-ML)
-foxtrick.tweaks.copyratings.away=Kopier ratingane til bortelaget (i HT-ML)
-foxtrick.tweaks.ratingscopied=Ratingane har vorte kopiert.
+CopyRatings.both=Kopier ratingane (i HT-ML)
+CopyRatings.home=Kopier heimelaget sin rating (i HT-ML)
+CopyRatings.away=Kopier ratingane til bortelaget (i HT-ML)
+CopyRatings.copied=Ratingane har vorte kopiert.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Kopier treningsrapport
 foxtrick.tweaks.copyskilltable=Kopier ferdigheitstabell (i HT-ML)
