--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -355,7 +355,7 @@ foxtrick.tweaks.bornin=Født i
 HatStatsDetailed=HatStats (detaljert)
 HatStatsTotalOnly=HatStats (kun total)
 foxtrick.tweaks.copyratings=Copy ratings to the clipboard (HT-BBCode style)
-foxtrick.tweaks.ratingscopied=The Ratings have been copied to the clipboard.
+CopyRatings.copied=The Ratings have been copied to the clipboard.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copy training report to clipboard
 foxtrick.tweaks.reportcopied=The training report has been copied to the clipboard.
