--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -695,10 +695,10 @@ foxtrick.tweaks.copyplayerad=Kopiuj reklamę zawodnika do schowka
 foxtrick.tweaks.copied=Reklama skopiowana!
 HatStatsDetailed=HatStats (szczegółowo)
 HatStatsTotalOnly=HatStats (tylko suma)
-foxtrick.tweaks.copyratings=Kopiuj oceny meczowe do schowka (HT-BBCode)
-foxtrick.tweaks.copyratings.home=Kopiuj oceny gospodarzy do schowka (HT-BBCode)
-foxtrick.tweaks.copyratings.away=Kopiuj oceny gości do schowka (HT-BBCode)
-foxtrick.tweaks.ratingscopied=Zrobione!
+CopyRatings=Kopiuj oceny meczowe do schowka (HT-BBCode)
+CopyRatings.home=Kopiuj oceny gospodarzy do schowka (HT-BBCode)
+CopyRatings.away=Kopiuj oceny gości do schowka (HT-BBCode)
+CopyRatings.copied=Zrobione!
 foxtrick.tweaks.youthclub=Akcje
 foxtrick.tweaks.copytrainingreport=Kopiuj raport treningowy do schowka
 foxtrick.tweaks.copyskilltable=Kopiuj umiejętności do schowka
