--- a/content/locale/pt/foxtrick.properties
+++ b/content/locale/pt/foxtrick.properties
@@ -375,7 +375,7 @@ foxtrick.tweaks.bornin=Nascido em
 HatStatsDetailed=HatStats (detalhados)
 HatStatsTotalOnly=HatStats (valor total apenas)
 foxtrick.tweaks.copyratings=Copiar ratings para a Área de Transferências (Estilo HT-BBCode)
-foxtrick.tweaks.ratingscopied=Os ratings foram copiados para a Área de Transferências.
+CopyRatings.copied=Os ratings foram copiados para a Área de Transferências.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copiar o relatório de treino para a caixa de texto.
 foxtrick.tweaks.reportcopied=O relatório de treino foi copiado com sucesso.
