--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -693,10 +693,10 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
-foxtrick.tweaks.copyratings.both=Copiaza ratingurile (stil HT-ML)
-foxtrick.tweaks.copyratings.home=Copiaza ratingurile echipei gazda (stil HT-ML)
-foxtrick.tweaks.copyratings.away=Copiaza ratingurile echipe vizitatoare (stil HT-ML)
-foxtrick.tweaks.ratingscopied=Ratingurile au fost copiate in clipboard.
+CopyRatings.both=Copiaza ratingurile (stil HT-ML)
+CopyRatings.home=Copiaza ratingurile echipei gazda (stil HT-ML)
+CopyRatings.away=Copiaza ratingurile echipe vizitatoare (stil HT-ML)
+CopyRatings.copied=Ratingurile au fost copiate in clipboard.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copiaza raportul antrenamentului in clipboard.
 foxtrick.tweaks.copyskilltable=Copiaza tabelul cu calitatile juniorilor in clipboard (HT-ML).
