--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -722,10 +722,10 @@ foxtrick.tweaks.copied=Informácie o hráčovi boli vložené do schránky.
 foxtrick.tweaks.bornin=Národnosť:
 HatStatsDetailed=HatStats (podrobné)
 HatStatsTotalOnly=HatStats (len celkové)
-foxtrick.tweaks.copyratings=Kopírovať ratingy do schránky(pre použitie na konferencii)
-foxtrick.tweaks.copyratings.home=Skopírovať ratingy domáceho tímu (v HT-ML formáte)
-foxtrick.tweaks.copyratings.away=Skopírovať ratingy hosťujúceho tímu (v HT-ML formáte)
-foxtrick.tweaks.ratingscopied=Ratingy boli skopírované do schránky.
+CopyRatings=Kopírovať ratingy do schránky(pre použitie na konferencii)
+CopyRatings.home=Skopírovať ratingy domáceho tímu (v HT-ML formáte)
+CopyRatings.away=Skopírovať ratingy hosťujúceho tímu (v HT-ML formáte)
+CopyRatings.copied=Ratingy boli skopírované do schránky.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Skopírovať tréningovú správu do schránky
 foxtrick.tweaks.copyskilltable=Skopírovať tabuľku so skillmi do schránky (v HT-ML formáte)
