--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -730,10 +730,10 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
-foxtrick.tweaks.copyratings.both=Kopiera betyg (HT-ML)
-foxtrick.tweaks.copyratings.home=Kopiera hemmalagets betyg till urklipp (HT-ML)
-foxtrick.tweaks.copyratings.away=Kopiera bortalagets betyg till urklipp (HT-ML)
-foxtrick.tweaks.ratingscopied=Betygen har kopierats till urklipp.
+CopyRatings.both=Kopiera betyg (HT-ML)
+CopyRatings.home=Kopiera hemmalagets betyg till urklipp (HT-ML)
+CopyRatings.away=Kopiera bortalagets betyg till urklipp (HT-ML)
+CopyRatings.copied=Betygen har kopierats till urklipp.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Kopiera träningsrapport till urklipp
 foxtrick.tweaks.copyskilltable=Kopiera tabellöversikten till urklipp (HT-ML)
