--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -475,7 +475,7 @@ foxtrick.tweaks.bornin=Народжений в
 HatStatsDetailed=HatStats (детально)
 HatStatsTotalOnly=HatStats (загалом)
 foxtrick.tweaks.copyratings=Копіювати рейтинги до буферу обміну (у вигляді HT-BBCode)
-foxtrick.tweaks.ratingscopied=Рейтинги матчу скопійовано до буферу обміну.
+CopyRatings.copied=Рейтинги матчу скопійовано до буферу обміну.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Копіювати звіт про тренування до буферу обміну
 foxtrick.tweaks.reportcopied=Звіт про тренування скопійовано до буферу обміну.
