--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -689,10 +689,10 @@ foxtrick.tweaks.copyplayerad=Sao chép quảng cáo cầu thủ vào bộ nhớ 
 foxtrick.tweaks.copied=Quảng cáo cầu thủ này đã được sao chép vào bộ nhớ đệm.
 HatStatsDetailed=HatStats (chi tiết)
 HatStatsTotalOnly=HatStats (tổng)
-foxtrick.tweaks.copyratings=Sao chép đánh giá vào bộ nhớ đệm(kiểu HT-BBCode)
-foxtrick.tweaks.copyratings.home=Sao chép đánh giá đội chủ nhà vào bộ nhớ đệm (kiểu HT-BBCode)
-foxtrick.tweaks.copyratings.away=Sao chép đánh giá đội khách vào bộ nhớ đệm (kiểu HT-BBCode)
-foxtrick.tweaks.ratingscopied=Phần đánh giá vừa được sao chép vào bộ nhớ đệm.
+CopyRatings=Sao chép đánh giá vào bộ nhớ đệm(kiểu HT-BBCode)
+CopyRatings.home=Sao chép đánh giá đội chủ nhà vào bộ nhớ đệm (kiểu HT-BBCode)
+CopyRatings.away=Sao chép đánh giá đội khách vào bộ nhớ đệm (kiểu HT-BBCode)
+CopyRatings.copied=Phần đánh giá vừa được sao chép vào bộ nhớ đệm.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Sao chép báo cáo tập luyện vào bộ nhớ đệm
 foxtrick.tweaks.copyskilltable=Sao chép bảng kỹ năng vào bộ nhớ đệm (kiểu HT Forum)
