--- a/content/locale/zh/foxtrick.properties
+++ b/content/locale/zh/foxtrick.properties
@@ -654,10 +654,10 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
-foxtrick.tweaks.copyratings.both=复制比赛评级 (HT-ML 格式)
-foxtrick.tweaks.copyratings.home=复制主队比赛评级 (HT-ML 格式)
-foxtrick.tweaks.copyratings.away=复制客队比赛评级 (HT-ML 格式)
-foxtrick.tweaks.ratingscopied=已复制比赛评级.
+CopyRatings.both=复制比赛评级 (HT-ML 格式)
+CopyRatings.home=复制主队比赛评级 (HT-ML 格式)
+CopyRatings.away=复制客队比赛评级 (HT-ML 格式)
+CopyRatings.copied=已复制比赛评级.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=复制训练报告
 foxtrick.tweaks.copyskilltable=复制技能表 (HT-ML 格式)
