--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -706,10 +706,10 @@ foxtrick.tweaks.copyplayerad=Copia l’anunci del jugador al porta-retalls
 foxtrick.tweaks.copied=S’ha copiat l’anunci de jugador al porta-retalls.
 HatStatsDetailed=HatStats (detallat)
 HatStatsTotalOnly=HatStats (només totals)
-foxtrick.tweaks.copyratings.both=Copia els ratis (HT-ML)
-foxtrick.tweaks.copyratings.home=Copia els ratis de l'quip casolà (HT-ML)
-foxtrick.tweaks.copyratings.away=Copia els ratis de l'equip forà (HT-ML)
-foxtrick.tweaks.ratingscopied=S’han copiat els ratis al porta-retalls.
+CopyRatings.both=Copia els ratis (HT-ML)
+CopyRatings.home=Copia els ratis de l'quip casolà (HT-ML)
+CopyRatings.away=Copia els ratis de l'equip forà (HT-ML)
+CopyRatings.copied=S’han copiat els ratis al porta-retalls.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copia al porta-retalls el reportatge d'entrenament
 foxtrick.tweaks.copyskilltable=Copia la taula d'habilitats al porta-retalls (HT-ML)
