--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -559,7 +559,7 @@ foxtrick.tweaks.bornin=Born in
 HatStatsDetailed=HatStats (detailed)
 HatStatsTotalOnly=HatStats (total only)
 foxtrick.tweaks.copyratings=Copy ratings to the clipboard (HT-BBCode style)
-foxtrick.tweaks.ratingscopied=The Ratings have been copied to the clipboard.
+CopyRatings.copied=The Ratings have been copied to the clipboard.
 foxtrick.tweaks.youthclub=hattrick youthclub
 foxtrick.tweaks.copytrainingreport=Copy training report to clipboard
 foxtrick.tweaks.copyscoutreport=Copy scout report to clipboard
