Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6521 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/faq.xml
+++ b/content/locale/sr/faq.xml
@@ -75,7 +75,7 @@
 		<question>Како да подесим формат датума за штампу?</question>
 		<answer>
 			<xhtml:p>
-				Формат датума за штампу се користи за случајеве када Фокстрик убацује датум и време на неку веб страницу.
+				Формат за приказивање датума се користи за случајеве када Фокстрик убацује датум и време на неку веб страницу.
 				Подешавањем формата можете изабрати начин на који желите да датум и време буду приказани.
 			</xhtml:p>
 			<xhtml:p>
