--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -955,6 +955,7 @@ foxtrick.prefs.basicPreferences=Основна подешавања
 foxtrick.prefs.captionHTLanguage=Подешавање језика
 foxtrick.prefs.captionHTDateformat=Подешавање формата датума
 foxtrick.prefs.captionHTCountry=Подешавање за државу
+pref.printDateFormat=Формат за приказивање датума
 foxtrick.prefs.captionShowOnStatusBar=Статус бар иконица
 foxtrick.prefs.captionCleanupBranch=Сачувана подешавања
 foxtrick.prefs.captionLoadSavePrefs=Увези или Извези подешавања
