Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6522 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/faq.xml
+++ b/content/locale/sr/faq.xml
@@ -72,7 +72,7 @@
 		</answer>
 	</item>
 		<item id="print-date-format">
-		<question>Како да подесим формат датума за штампу?</question>
+		<question>Како да подесим формат за приказивање датума?</question>
 		<answer>
 			<xhtml:p>
 				Формат за приказивање датума се користи за случајеве када Фокстрик убацује датум и време на неку веб страницу.
