Editing module "LiveAlert" so there will be no confusing about it not being a sound alert!
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6530 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -1,4 +1,3 @@
-
 # Swedish language file (based on master r6366)
 # utf-8 encoded Swedish
 
@@ -369,7 +368,7 @@ foxtrick.ForumThreadAutoIgnore.desc=Ignorera per automatik forumtrådar med rubr
 foxtrick.ForumThreadAutoIgnore.Tags.desc=List of tags, eg: NT, idea, Bug. Comma separated, case insensitive.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist of threads by IDs (the part before the dot). Threads in whitelist will not be ignored. Comma separated.
 foxtrick.TableSort.desc=Makes all 'proper' tables sortable which have a header (including tables in forum postings)
-foxtrick.LiveAlert.desc=Ljud vid mål i HT Live
+foxtrick.LiveAlert.desc=Notis vid mål i HT-Live
 foxtrick.OldStyleFace.desc=Visa spelares ansikten i den gamla hattrickstilen
 
 foxtrick.NtPeek.desc=Tjuvtitt på NT/U20 -matcher under varje lands huvudsida, samt under MittHattrick
