Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6546 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -182,7 +182,6 @@ foxtrick.SimplePresentation.League_Table.desc=Додаје вертикалне 
 foxtrick.SimplePresentation.Guestbook.desc=Побољшава читљивост порука у књизи гостију (уоквирује поруке сивом подлогом).
 foxtrick.SimplePresentation.liveHighlightRed.desc=Обележава црвеном бојом нове догађаје у ХТ Уживо.
 foxtrick.SimplePresentation.Highlight_Staff_On_All_Pages.desc=Означава ХТ особље на свим страницама.
-foxtrick.SimplePresentation.HideUnseenMatchesPanel.desc=Сакрива панел са информацијама о утакмицама које нисте одгледали.
 foxtrick.SimplePresentation.HideAchievementsIcons.desc=Сакрива иконице на страници за достигнућа.
 foxtrick.SimplePresentation.NoLogo.desc=Сакрива логое тимова.
 foxtrick.ForumPresentation.desc=Додатне опције за изглед Форума.
@@ -323,6 +322,7 @@ foxtrick.ForumThreadAutoIgnore.Tags.desc=Тагови (на пример: NT, id
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=ИД-ови тема (део ИД-а поста до тачке испред броја поста) које неће бити игнорисане (ИД-ове раздвојите зарезом)
 foxtrick.TableSort.desc=Омогућава сортирање по колонама свих 'правих' табела које имају заглавље (укључујући и табеле у постовима на форуму)
 foxtrick.LiveAlert.desc=Обавештењa за голове у мечевима које пратите уживо.
+foxtrick.LiveAlert.Sound.desc=Обавештење пропрати и звуком
 foxtrick.OldStyleFace.desc=Прикажи слике играча и аватаре на форуму у старом Хеттрик стилу
 foxtrick.NtPeek.desc=Додаје преглед актуелних мечева сениорске и младе репрезентације на страницу: Мој Хеттрик » Вести
 foxtrick.SeriesFlags.desc=Прикажи заставице држава поред линка ка менаџерима.
