new FoxTrick module for Hattrick Youth Statistics ht-ys.org
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6548 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -350,6 +350,9 @@ foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Verberge die Sekretärin
 foxtrick.MyMonitor.desc=Beobachte aktuelle Spiele von Freunden und Gegnern unter 'Mein Hattrick'
 foxtrick.MarkAllAsRead.desc=Ein Button, um alle Threads im Forum als gelesen zu markieren
 foxtrick.ShowFriendlyBooked.desc=Zeige auf der Ligaseite an, ob ein Team ein Freundschaftsspiel gebucht hat
+foxtrick.CopyYouthLeagueFixturesSource.desc=Hinzufügen eines 'HTML Quellcode' Buttons zur Jugendligaspielplanseite (für HT Youth Statistics ht-ys.org)
+foxtrick.CopyYouthLeagueFixturesSource.OpenHTYSpage.desc=Öffnen von ht-ys.org in einem neuen Tab nach dem Kopieren
+foxtrick.YouthStatistics.desc=Hinzufügen eines Links auf Hattrick Youth Statistics ht-ys.org zur Jugendligaseite
 # -----------------------------------------------------------------------------
 
 
@@ -686,6 +689,10 @@ foxtrick.tweaks.skilltablecopied=Der Skilltabellen-Quelltext wurde in die Zwisch
 foxtrick.tweaks.matchidcopied=MatchID in die Zwischenablage kopiert.
 foxtrick.tweaks.postidcopied=PostID in die Zwischenablage kopiert.
 foxtrick.tweaks.postingcopied=Posting in die Zwischenablage kopiert.
+foxtrick.tweaks.youthstatistics=Youth Statistics ht-ys.org
+foxtrick.tweaks.copyyouthfixturessource=Kopiere HTML Quellcode in die Zwischenablage
+foxtrick.tweaks.youthfixturessourcecopied=HTML Quellcode wurde in die Zwischenablage kopiert.
+foxtrick.tweaks.linkyouthstatistics=Jugendstatistiken
 
 #matches
 foxtrick.matches.attackdefensebars=Teamvergleich
