Add Hattrick Youth Statistics to FoxTrick Links; Add Hattrick Youth Statistics link to youth league page;
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6557 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -107,6 +107,7 @@ foxtrick.LinksYouthTraining.desc=Links hinzufügen auf der Jugendtraining-Seite
 foxtrick.LinksYouthPlayerDetail.desc=Links hinzufügen auf der Jugend-Spielerdetails-Seite
 foxtrick.LinksYouthPlayerList.desc=Links hinzufügen auf der Jugend-Spieler-Seite
 foxtrick.LinksYouthMatchList.desc=Links hinzufügen auf der Jugend-Spiele-Seite
+foxtrick.LinksYouthLeague.desc=Links hinzufügen auf der Jugendliga-Seite
 foxtrick.LinksArena.desc=Links hinzufügen auf der Stadion-Seite
 foxtrick.LinksCoach.desc=Links hinzufügen zur Training-Seite
 foxtrick.LinksPlayerDetail.desc=Links hinzufügen zur Spieler-Seite
