Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6604 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -345,6 +345,8 @@ foxtrick.MarkAllAsRead.desc=Дугме за означавање свих тем
 foxtrick.ShowFriendlyBooked.desc=Прикажи на страници лиге тимове који су заказали пријатељску утакмицу
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Приказуј само на изричит захтев
 foxtrick.TickerAlert.desc=Покажи обавештење кад год се појави нова информација у тикеру. Да искључите звучно обавештење, поље за адресу звучног фајла оставите празно.
+foxtrick.SupporterStatsEnhancements.desc=Оѕначава играче који су још увек у клубу на страници супортер статистике
+
 # -----------------------------------------------------------------------------
 
 
@@ -693,6 +695,7 @@ PreferenceTab=Подешавања
 NewAfter=Верзија
 ChangeCategory=Тип
 Coach=Тренер
+CurrentSquad=Још увек у клубу
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
@@ -795,6 +798,7 @@ foxtrick.FlagCollectionToMap.World=Свет
 
 # SkillTable
 Skill_table=Табела вештина
+foxtrick.SkillTable.detach=Издвоји
 
 Nationality=Националност
 Nationality.abbr=Нац.
@@ -896,7 +900,7 @@ ticker.type.challenge=Изазов
 ticker.type.guestbook=Књига гостију
 ticker.type.mail=ХТ порука
 ticker.type.myht=Мој Хеттрик вести  
-ticker.type.others=Sistemske informacije
+ticker.type.others=Остало
 
 # LocalTime
 LocalTime.hattrick=Хеттрик време
@@ -909,6 +913,7 @@ Copy=Копирај
 View=Погледај
 Switch_view=Отвори/Затвори
 Filter=Филтер
+Detach=Издвоји
 
 # buttons
 button.ok=Потврди
