skill-table.js: specs localized
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6607 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -131,7 +131,7 @@ foxtrick.ForumAlterHeaderLine.TruncateLongNick.desc=Anzeige der ersten 10 (simpl
 foxtrick.ForumAlterHeaderLine.TruncateLeagueName.desc=Nur das Ligalevel anzeigen
 foxtrick.ForumAlterHeaderLine.ShortPostId.desc=Nur Anzeige der Post-Nummer und Verstecken der ThreadID.
 foxtrick.ForumAlterHeaderLine.SmallHeaderFont.desc=Entfernt einige Leerräume im Postingkopf und setzt die Schriftgrösse auf 10
-foxtrick.ForumAlterHeaderLine.CheckDesign.desc=Überprüft, ob der Headder ohne Probleme einzeilig dargestellt werden kann. Verzögert die Anzeige der Seite enorm!
+foxtrick.ForumAlterHeaderLine.CheckDesign.desc=Überprüft, ob der Header ohne Probleme einzeilig dargestellt werden kann. Verzögert die Anzeige der Seite enorm!
 foxtrick.ForumAlterHeaderLine.ReplaceSupporterStar.desc=Ersetzt die Supportersterne durch ein * um Platz zu sparen
 foxtrick.ForumAlterHeaderLine.BookmarkHeaderSmall.desc=Ersetzt 'bookmark Posting' Icon mit einen kleineren
 foxtrick.ForumAlterHeaderLine.HighlightThreadOpener.desc=Hervorheben aller PostIDs, welche vom Threaderöffner erstellt wurden
@@ -507,6 +507,13 @@ Keeper=Torwart
 Keeper.abbr=TW
 Set_pieces=Standards
 Set_pieces.abbr=ST
+
+Technical=Ballzauberer
+Quick=schnell
+Powerful=durchsetzungsstark
+Unpredictable=unberechenbar
+Head=Kopfballstärke
+Regainer=Geneser
 
 HTMS_Ability=HTMS Fähigkeitspunkte
 HTMS_Ability.abbr=Fähigkeit
